--- a/sections/collection-template.liquid
+++ b/sections/collection-template.liquid
@@ -65,6 +65,9 @@
         <video autoplay muted loop playsinline id="myVideo" style="object-fit: cover;width: 100vw;">
           <source src="{{ section.settings.video_bg }}" type="video/mp4">
         </video>
+        <video autoplay muted loop playsinline id="myVideo-test" style="object-fit: cover;width: 100vw; display: none; max-height: 600px;">
+          <source src="https://cdn.shopify.com/s/files/1/0291/1322/1168/files/11111.mp4?v=1635436999" type="video/mp4">
+        </video>
         {%- else -%}
         <div class="collection-hero__image ratio-container lazyload js"
               data-bgset="{% include 'bgset', image: collection.image %}"
@@ -686,6 +689,18 @@
           "type":"checkbox",
           "id":"enable_video",
           "label":"Enable Video"
+       },
+       {
+         "type": "checkbox",
+         "id": "enable_external_video",
+         "default": false,
+         "label": "Enable External video"
+       },
+       {
+         "type": "video_url",
+         "accept": ["vimeo", "youtube"],
+         "id": "external_video",
+         "label": "Link to extarnal Video"
        },
        {
           "type":"text",
