Added analitycs to collection list page

--- a/assets/custom.scss.liquid
+++ b/assets/custom.scss.liquid
@@ -817,4 +817,5 @@ input.btn.add_toCart {
   .product__label--for-any-size {background-color: #d6d6d4}
   .product__label--sale {background-color: rgba(0, 0, 0, 1); color: white}
   .product__label--most-popular {background-color: #ff862d; color: white;}
+  .product__label--symbol-2022 {background-color: #ff2d2d; color: white;font-size: 14px;}
 
