--- a/sections/featured-product.liquid
+++ b/sections/featured-product.liquid
@@ -393,6 +393,7 @@
       </div>
     </div>
   </div>
+{% render 'pe-disco-countdown-timer-featured-product', product: product %}
 </div>
 
 {% unless product == empty %}
