Padding added to mobile header

--- a/sections/list-collections-new-template.liquid
+++ b/sections/list-collections-new-template.liquid
@@ -261,7 +261,7 @@
               </div>
             </div>
             <div class="collections-item__img">
-              <img src="{{ block.settings.collection_image | img_url: 'master'}}" alt="">
+              <img src="{{ block.settings.collection_image | img_url: '267x300'}}" alt="">
             </div>
             <div class="item-hover" style="background: url({{ block.settings.collection_hover_image | img_url: 'master' }}) no-repeat;background-size: cover;background-position: center;">
               <div class="item-hover__btn">
@@ -284,7 +284,7 @@
                 {{ block.settings.product_description }}
               </div>
               <div class="collections-item__bottom">
-                  <span class="collections-item__num">1 ITEMS</span>
+                  <span class="collections-item__num">1 ITEM</span>
                   <span class="collections-item__price">FROM {{ block.settings.product_item.price | money}}</span>
               </div>
               <div class="item-button__mobile">
@@ -292,7 +292,7 @@
               </div>
               </div>
               <div class="collections-item__img">
-              <img src="{{ block.settings.product_image | img_url: 'master' }}" alt="">
+              <img src="{{ block.settings.product_image | img_url: '267x300' }}" alt="">
               </div>
               <div class="item-hover" style="background: url({{ block.settings.product_hover_image | img_url: 'master' }}) no-repeat;background-size: cover;background-position: center;">
               <div class="item-hover__btn">
