--- a/sections/product-subscription-template.liquid
+++ b/sections/product-subscription-template.liquid
@@ -142,6 +142,7 @@
         <style>
             .getsocial {
               padding-top: 15px;
+              padding-bottom: 15px;
             }
         </style>
         {%- include 'getsocial-inline-bar' -%}
