--- a/sections/product-template-map.liquid
+++ b/sections/product-template-map.liquid
@@ -288,6 +288,7 @@
         <style>
           .getsocial {
             padding-top: 15px;
+            padding-bottom: 15px;
           }
       </style>
           {%- include 'getsocial-inline-bar' -%}
