--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -379,6 +379,7 @@
     }
     .getsocial {
       padding-top: 15px;
+      padding-bottom: 15px;
     }
     .getsocial.gs-inline-group.gs-big-counter {
         margin-bottom: 5px !important;
