--- a/sections/product-giftcart-template.liquid
+++ b/sections/product-giftcart-template.liquid
@@ -164,6 +164,7 @@
       <style>
         .getsocial {
           padding-top: 15px;
+          padding-bottom: 15px;
         }
     </style>
         {%- include 'getsocial-inline-bar' -%}
