--- a/sections/product-template-mandala.liquid
+++ b/sections/product-template-mandala.liquid
@@ -380,6 +380,7 @@
         }
         .getsocial {
           padding-top: 15px;
+          padding-bottom: 15px;
         }
         .getsocial.gs-inline-group.gs-big-counter {
             margin-bottom: 5px !important;
