Fixes Implementing a new page template QUEZZLE

--- a/sections/product-quezzle-template.liquid
+++ b/sections/product-quezzle-template.liquid
@@ -1016,7 +1016,7 @@
               margin: 0 auto 10px;
           }
           .catchy-gift-left h3{
-              max-width: 130px;
+              max-width: 170px;
           }
   
           .catchy-gift-featured{
@@ -2209,6 +2209,7 @@
                           <h4>Lose yourself <br>in going <br>through the main <br>quest</h4>
                           <p>Go through mazes and complete additional tasks</p>
                       </div>
+                      {%-comment-%}
                       <div class="quzzel-featured-box quzzel-featured-box-6">
                           <img class="number-img" src="{{'number-img6.png' | asset_url }}" alt="IMG">
                           <div class="quzzel-featured-img">
@@ -2217,6 +2218,7 @@
                           <h4>The adventure will go on in augmented reality!</h4>
                           <p>Quezzle is a bright catchy gift </p>
                       </div>
+                      {%-endcomment-%}
                   </div>
               </div>
               <div class="catchy-gift-wrap">    
