Quezzle custome page

--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -19,7 +19,7 @@
     <main class="page__content">
         <h1 class="visually-hidden">QUEZZLE - Пазл и Квест</h1>
         <div class="intro page__intro" id="intro">
-            <div class="intro__start"><button class="button intro__button-start button--blue" type="button"><span class="button__caption">Начать приключение</span></button></div>
+            <div class="intro__start"><button class="button intro__button-start button--blue" type="button"><span class="button__caption">Start your adventure</span></button></div>
             <picture>
                 <source srcset="{{'intro-balloon@desktop.webp' | asset_url }} 1x, {{'intro-balloon@desktop@2x.webp' | asset_url }} 2x" media="(min-width: 1000px)" type="image/webp" />
                 <source srcset="{{'intro-balloon@desktop.png' | asset_url }} 1x, {{'intro-balloon@desktop@2x.png' | asset_url }} 2x" media="(min-width: 1000px)" type="image/png" />
@@ -186,22 +186,22 @@
                                 </picture>
                             </div>
                             <div class="product__content">
-                                <h3 class="product__title">Часть 2, 3 и 4</h3>
-                                <p class="product__subtitle">Докупите до полного набора и начинайте основной квест</p><button class="product__toggle" type="button"><span class="product__toggle-caption">Подробнее</span><span class="product__toggle-caption">Скрыть</span></button>
+                                <h3 class="product__title">Parts 2, 3 and 4</h3>
+                                <p class="product__subtitle">Buy up to a complete set and start the main quest</p><button class="product__toggle" type="button"><span class="product__toggle-caption">Подробнее</span><span class="product__toggle-caption">Скрыть</span></button>
                                 <div class="product__details">
                                     <ul class="product__options">
-                                        <li class="product__option disabled">Район Небесного дракона</li>
-                                        <li class="product__option">Район Западные переулки</li>
-                                        <li class="product__option">Район Облачный закат</li>
-                                        <li class="product__option">Район Восточная площадь</li>
+                                        <li class="product__option disabled">Heavenly Dragon district</li>
+                                        <li class="product__option">Western side-streets district</li>
+                                        <li class="product__option">Cloudy sunset district</li>
+                                        <li class="product__option">Eastern square district</li>
                                     </ul>
                                     <ul class="product__features">
                                         <li class="product__feature">750 pieces </li>
-                                        <li class="product__feature">36 см х 25 см - 3 шт.</li>
-                                        <li class="product__feature">3D фигурка - 3 шт.</li>
-                                        <li class="product__feature">30 доп. заданий</li>
-                                        <li class="product__feature">5 лабиринтов</li>
-                                        <li class="product__feature disabled">6 мини-пазлов</li>
+                                        <li class="product__feature">36 x 25 cm — 3 pcs</li>
+                                        <li class="product__feature">3D-figurine — 3 pcs</li>
+                                        <li class="product__feature">30 additional tasks</li>
+                                        <li class="product__feature">5 mazes</li>
+                                        <li class="product__feature disabled">6 mini-puzzles</li>
                                         <li class="product__feature disabled">4 сюжетных лабиринта</li>
                                     </ul>
                                 </div>
@@ -220,23 +220,23 @@
                                 </picture>
                             </div>
                             <div class="product__content">
-                                <h3 class="product__title">Полный набор</h3>
-                                <p class="product__subtitle">Все 4 части откроют сюжетную линию &mdash; квест из 12 шагов</p><button class="product__toggle" type="button"><span class="product__toggle-caption">Подробнее</span><span class="product__toggle-caption">Скрыть</span></button>
+                                <h3 class="product__title">Сomplete set</h3>
+                                <p class="product__subtitle">All of 4 parts together open the story line — 12-step quest</p><button class="product__toggle" type="button"><span class="product__toggle-caption">Подробнее</span><span class="product__toggle-caption">Скрыть</span></button>
                                 <div class="product__details">
                                     <ul class="product__options">
-                                        <li class="product__option">Район Небесного дракона</li>
-                                        <li class="product__option">Район Западные переулки</li>
-                                        <li class="product__option">Район Облачный закат</li>
-                                        <li class="product__option">Район Восточная площадь</li>
+                                        <li class="product__option">Heavenly Dragon district</li>
+                                        <li class="product__option">Western side-streets district</li>
+                                        <li class="product__option">Cloudy sunset district</li>
+                                        <li class="product__option">Eastern square district</li>
                                     </ul>
                                     <ul class="product__features">
-                                        <li class="product__feature">1000 Деталей</li>
-                                        <li class="product__feature">36 см х 25 см - 4 шт.</li>
-                                        <li class="product__feature">3D фигурка - 4 шт.</li>
-                                        <li class="product__feature">40 доп. заданий</li>
-                                        <li class="product__feature">6 лабиринтов</li>
-                                        <li class="product__feature">6 мини-пазлов</li>
-                                        <li class="product__feature">4 сюжетных лабиринта</li>
+                                        <li class="product__feature">1000 pieces</li>
+                                        <li class="product__feature">36 x 25 cm — 4 pcs</li>
+                                        <li class="product__feature">3D-figurine — 4 pcs</li>
+                                        <li class="product__feature">40 additional tasks</li>
+                                        <li class="product__feature">6 mazes</li>
+                                        <li class="product__feature">6 mini-puzzles</li>
+                                        <li class="product__feature">4 storyline mazes</li>
                                     </ul>
                                 </div>
                             </div>
@@ -1279,8 +1279,8 @@
             </section>
             <div class="last-step lazy-bg page__last-step" id="last-step">
                 <div class="last-step__container">
-                    <h2 class="title last-step__title">Остался последний шаг</h2>
-                    <p class="last-step__text"><b>Начни познавать мир Каппадокии вместе с Quezzle уже сейчас!</b> Осталось только выбрать свой набор пазлов и увлекательное путешествие ждет тебя </p>
+                    <h2 class="title last-step__title">One last step left</h2>
+                    <p class="last-step__text"><b>Start learning Cappadocia world right now together with Quezzle!</b> Just go choose your own puzzles set and a fascinating journey is already waiting for you!</p>
                     <picture>
                         <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="{{'last-step-last-step@desktop.webp' | asset_url }} 1x, {{'last-step-last-step@desktop@2x.webp' | asset_url }} 2x" media="(min-width: 480px)" type="image/webp" />
                         <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="{{'last-step-last-step@desktop.png' | asset_url }} 1x, {{'last-step-last-step@desktop@2x.png' | asset_url }} 2x" media="(min-width: 480px)" type="image/png" />
